[project]
name = "ml4gw-buoy"
dynamic = ["version"]
description = "Deploy Aframe and AMPLFI models over open data"
authors = [
    { name = "Will Benoit", email = "benoi090@umn.edu" },
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "amplfi>=0.5.5",
    "ml4gw>=0.7.4",
    "jsonargparse~=4.40",
    "h5py",
    "numpy",
    "matplotlib>=3.9.4",
    "gwpy>=3.0.12",
    "ligo-skymap>=2.2.2,<3",
    "huggingface_hub~=0.30",
]

[project.scripts]
buoy = "buoy.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.2.1,<9",
    "jupyter>=1.0.0,<2",
    "conda-lock>=2.5.1,<3",
    "prek>=0.1",
]

[tool.uv]

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}.post{ccount}+git.{sha}"

[build-system]
requires = [ "setuptools>=77.0.3", "wheel", "setuptools-git-versioning>=2.0,<3",]
build-backend = "setuptools.build_meta"

[tool.hatch.build.targets.sdist]
include = ["buoy"]

[tool.hatch.build.targets.wheel]
include = ["buoy"]

[tool.ruff]
line-length = 79
extend-include = ["T201"]

[tool.ruff.lint]
extend-safe-fixes = ["C408"]
mccabe = {"max-complexity" = 18}
select = ["B", "C", "E", "F", "I", "UP", "W", "B9"]
# ignore W605 and E203 for consistency with black
ignore = ["W605", "E203"]

# ignore asterisk imports and unused
# import errors in __init__ files
per-file-ignores =  {"**/__init__.py" = ["F401", "F403"]}
